# dashlane-c-cli

./: CMakeLists.txt  LICENSE  README  generate.cmd  project.cmake
_private/: AccessKeys.h
code/dashlane-cli/: Application.cpp  Application.h  CMakeLists.txt  CommandRegistry.cpp  CommandRegistry.h  CoreConfig.h  main.cpp
code/dashlane-cli/Commands/: Command.h  Common.h  Configure.cpp  License.cpp  Password.cpp  Reset.cpp  ResetAll.cpp  Sync.cpp
code/dashlane-cli/Utility/: DashlaneContext.h  UserInput.h
code/dashlane-lib/: CMakeLists.txt
code/dashlane-lib/include/dashlane/: API.h  Dashlane.h  Errors.h
code/dashlane-lib/include/dashlane/Test/: Serialization.h
code/dashlane-lib/src/: Dashlane.cpp  Dashlane.h  Database.cpp  Database.h  Encryption.cpp  Encryption.h  Keychain.cpp  Keychain.h  Serialization.cpp  Serialization.h  StdAfx.h
code/dashlane-lib/src/Api/: ApiRequest.cpp  ApiRequest.h
code/dashlane-lib/src/Api/Endpoints/: CompleteDeviceRegistration.h  GetAuthenticationMethodsForDevice.h  GetLatestContent.h  PerformDashlaneAuthenticatorVerification.h  PerformDuoPushVerification.h  PerformEmailTokenVerification.h  PerformTotpVerification.h  RequestEmailTokenVerification.h
code/dashlane-lib/src/Test/: Serialization.cpp
code/dashlane-lib/src/Types/: Auth.h  Crypto.h  Transactions.h
code/dashlane-lib/src/Utility/: ConceptHelpers.h  Cryptography.h  EnumClass.h  Filesystem.h  Strings.h  Time.h  Transaction.h  Vector.h  Zip.h
code/dashlane-lib/src/middleware/: configure.h  getPasswords.h  getSecureNotes.h  perform2FAVerification.h  registerDevice.h  reset.h  sync.h
code/libs/argon2/: CMakeLists.txt
code/libs/base64pp/: CMakeLists.txt
code/libs/clip/: CMakeLists.txt
code/libs/curl/: CMakeLists.txt
code/libs/keychain/: CMakeLists.txt
code/libs/pugixml/: CMakeLists.txt
code/libs/sqlite3cpp/: CMakeLists.txt
code/libs/zlib/: CMakeLists.txt
tools/cmake/: CMakeLists.txt  common-macros.cmake
tools/cmake/toolchains/: msvc-win_x64.cmake
tools/cmake/win32/share/cmake-3.26/Help/command/: FIND_XXX.txt  add_compile_options.rst  add_custom_command.rst  add_link_options.rst  add_test.rst  cmake_language.rst  cmake_minimum_required.rst  cmake_policy.rst  configure_file.rst  enable_language.rst  export.rst  file.rst  find_file.rst  find_library.rst  find_package.rst  find_path.rst  find_program.rst  get_filename_component.rst  if.rst  include_directories.rst  install.rst  list.rst  math.rst  project.rst  separate_arguments.rst  set.rst  set_property.rst  set_target_properties.rst  string.rst  target_compile_options.rst  target_link_options.rst  target_precompile_headers.rst  target_sources.rst  unset.rst
tools/cmake/win32/share/cmake-3.26/Help/cpack_gen/: nuget.rst  wix.rst
tools/cmake/win32/share/cmake-3.26/Help/envvar/: PackageName_ROOT.rst
tools/cmake/win32/share/cmake-3.26/Help/generator/: CodeBlocks.rst  CodeLite.rst  Visual Studio 9 2008.rst
tools/cmake/win32/share/cmake-3.26/Help/manual/: ccmake.1.rst  cmake-buildsystem.7.rst  cmake-commands.7.rst  cmake-env-variables.7.rst  cmake-file-api.7.rst  cmake-generator-expressions.7.rst  cmake-generators.7.rst  cmake-gui.1.rst  cmake-language.7.rst  cmake-policies.7.rst  cmake-presets.7.rst  cmake-properties.7.rst  cmake-toolchains.7.rst  cmake-variables.7.rst  cmake.1.rst  ctest.1.rst
tools/cmake/win32/share/cmake-3.26/Help/policy/: CMP0124.rst
tools/cmake/win32/share/cmake-3.26/Help/prop_sf/: CXX_SCAN_FOR_MODULES.rst  GENERATED.rst
tools/cmake/win32/share/cmake-3.26/Help/prop_test/: TIMEOUT_AFTER_MATCH.rst
tools/cmake/win32/share/cmake-3.26/Help/prop_tgt/: ARCHIVE_OUTPUT_DIRECTORY.rst  AUTOMOC_MACRO_NAMES.rst  COMPILE_OPTIONS.rst  CXX_MODULE_HEADER_UNIT_DIRS.rst  CXX_MODULE_HEADER_UNIT_DIRS_NAME.rst  CXX_MODULE_HEADER_UNIT_SET.rst  CXX_MODULE_HEADER_UNIT_SETS.rst  CXX_MODULE_HEADER_UNIT_SET_NAME.rst  CXX_SCAN_FOR_MODULES.rst  IMPORTED_LOCATION.rst  IMPORTED_NO_SYSTEM.rst  INTERFACE_CXX_MODULE_HEADER_UNIT_SETS.rst  LANG_CLANG_TIDY.rst  LANG_LINKER_LAUNCHER.rst  MSVC_DEBUG_INFORMATION_FORMAT.rst  NO_SYSTEM_FROM_IMPORTED.rst  SYSTEM.rst  VERIFY_INTERFACE_HEADER_SETS.rst  VS_DEBUGGER_COMMAND.rst  VS_DEBUGGER_COMMAND_ARGUMENTS.rst  VS_DEBUGGER_ENVIRONMENT.rst  VS_DEBUGGER_WORKING_DIRECTORY.rst
tools/cmake/win32/share/cmake-3.26/Help/release/: 3.11.rst  3.24.rst  3.25.rst  3.26.rst  index.rst
tools/cmake/win32/share/cmake-3.26/Help/variable/: CMAKE_GENERATOR_PLATFORM.rst  CMAKE_LANG_COMPILER_ID.rst  CMAKE_LANG_FLAGS.rst  CMAKE_LANG_FLAGS_CONFIG.rst  CMAKE_LANG_IMPLICIT_LINK_DIRECTORIES.rst  CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION_MAXIMUM.rst  PackageName_ROOT.rst
tools/cmake/win32/share/cmake-3.26/Modules/: CMakeCheckCompilerFlagCommonPatterns.cmake  CMakeDetermineCXXCompiler.cmake  CMakeDetermineCompilerABI.cmake  CMakeDetermineCompilerId.cmake  CMakeDetermineSystem.cmake  CMakeFortranCompiler.cmake.in  CMakePackageConfigHelpers.cmake  CMakeSwiftInformation.cmake  CPack.cmake  CheckFortranSourceCompiles.cmake  CheckFortranSourceRuns.cmake  CheckFunctionExists.cmake  CheckIncludeFile.cmake  CheckIncludeFileCXX.cmake  CheckIncludeFiles.cmake  CheckLanguage.cmake  CheckLibraryExists.cmake  CheckPrototypeDefinition.cmake  CheckSourceCompiles.cmake  CheckSourceRuns.cmake  CheckSymbolExists.cmake  CheckTypeSize.cmake  CheckVariableExists.cmake  ExternalProject.cmake  FetchContent.cmake  FindBoost.cmake  FindCUDAToolkit.cmake  FindHDF5.cmake  FindMPI.cmake  FindMatlab.cmake  FindOpenCL.cmake  FindOpenMP.cmake  FindOpenSSL.cmake  FindPython.cmake  FindPython2.cmake  FindPython3.cmake  FindZLIB.cmake  FindwxWidgets.cmake  FindwxWindows.cmake  FortranCInterface.cmake  (+2 more)
tools/cmake/win32/share/cmake-3.26/Modules/Compiler/: Clang-FindBinUtils.cmake  Clang.cmake  GNU.cmake  IAR.cmake  IBMClang.cmake  LLVMFlang-Fortran.cmake  NVIDIA-CUDA.cmake
tools/cmake/win32/share/cmake-3.26/Modules/FindPython/: Support.cmake
tools/cmake/win32/share/cmake-3.26/Modules/Platform/: Android.cmake  (+2 more)
tools/cmake/win32/share/cmake-3.26/include/: cmCPluginAPI.h
tools/cmake/win32/share/emacs/site-lisp/: cmake-mode.el
(+7 files in other folders)
