set(THIS_SDK_DIR ${OCT_SDKS_DIR}/curl/_src)

oct_define_sources(
	PLATFORM ALL

	"CMakeLists.txt"
	
	GROUP "includes"
		"${THIS_SDK_DIR}/include/curl/curl.h"
		"${THIS_SDK_DIR}/include/curl/curlver.h"
		"${THIS_SDK_DIR}/include/curl/easy.h"
		"${THIS_SDK_DIR}/include/curl/header.h"
		"${THIS_SDK_DIR}/include/curl/mprintf.h"
		"${THIS_SDK_DIR}/include/curl/multi.h"
		"${THIS_SDK_DIR}/include/curl/options.h"
		"${THIS_SDK_DIR}/include/curl/stdcheaders.h"
		"${THIS_SDK_DIR}/include/curl/system.h"
		"${THIS_SDK_DIR}/include/curl/typecheck-gcc.h"
		"${THIS_SDK_DIR}/include/curl/urlapi.h"
		"${THIS_SDK_DIR}/include/curl/websockets.h"

	GROUP "vauth"
		"${THIS_SDK_DIR}/lib/vauth/cleartext.c"
		"${THIS_SDK_DIR}/lib/vauth/cram.c"
		"${THIS_SDK_DIR}/lib/vauth/digest.c"
		"${THIS_SDK_DIR}/lib/vauth/digest_sspi.c"
		"${THIS_SDK_DIR}/lib/vauth/gsasl.c"
		"${THIS_SDK_DIR}/lib/vauth/krb5_gssapi.c"
		"${THIS_SDK_DIR}/lib/vauth/krb5_sspi.c"
		"${THIS_SDK_DIR}/lib/vauth/ntlm.c"
		"${THIS_SDK_DIR}/lib/vauth/ntlm_sspi.c"
		"${THIS_SDK_DIR}/lib/vauth/oauth2.c"
		"${THIS_SDK_DIR}/lib/vauth/spnego_gssapi.c"
		"${THIS_SDK_DIR}/lib/vauth/spnego_sspi.c"
		"${THIS_SDK_DIR}/lib/vauth/vauth.c"
		"${THIS_SDK_DIR}/lib/vauth/digest.h"
		"${THIS_SDK_DIR}/lib/vauth/ntlm.h"
		"${THIS_SDK_DIR}/lib/vauth/vauth.h"

	GROUP "vtls"
		"${THIS_SDK_DIR}/lib/vtls/bearssl.c"
		"${THIS_SDK_DIR}/lib/vtls/gskit.c"
		"${THIS_SDK_DIR}/lib/vtls/gtls.c"
		"${THIS_SDK_DIR}/lib/vtls/hostcheck.c"
		"${THIS_SDK_DIR}/lib/vtls/keylog.c"
		"${THIS_SDK_DIR}/lib/vtls/mbedtls.c"
		"${THIS_SDK_DIR}/lib/vtls/mbedtls_threadlock.c"
		"${THIS_SDK_DIR}/lib/vtls/nss.c"
		"${THIS_SDK_DIR}/lib/vtls/openssl.c"
		"${THIS_SDK_DIR}/lib/vtls/rustls.c"
		"${THIS_SDK_DIR}/lib/vtls/schannel.c"
		"${THIS_SDK_DIR}/lib/vtls/schannel_verify.c"
		"${THIS_SDK_DIR}/lib/vtls/sectransp.c"
		"${THIS_SDK_DIR}/lib/vtls/vtls.c"
		"${THIS_SDK_DIR}/lib/vtls/wolfssl.c"
		"${THIS_SDK_DIR}/lib/vtls/x509asn1.c"
		"${THIS_SDK_DIR}/lib/vtls/bearssl.h"
		"${THIS_SDK_DIR}/lib/vtls/gskit.h"
		"${THIS_SDK_DIR}/lib/vtls/gtls.h"
		"${THIS_SDK_DIR}/lib/vtls/hostcheck.h"
		"${THIS_SDK_DIR}/lib/vtls/keylog.h"
		"${THIS_SDK_DIR}/lib/vtls/mbedtls.h"
		"${THIS_SDK_DIR}/lib/vtls/mbedtls_threadlock.h"
		"${THIS_SDK_DIR}/lib/vtls/nssg.h"
		"${THIS_SDK_DIR}/lib/vtls/openssl.h"
		"${THIS_SDK_DIR}/lib/vtls/rustls.h"
		"${THIS_SDK_DIR}/lib/vtls/schannel.h"
		"${THIS_SDK_DIR}/lib/vtls/sectransp.h"
		"${THIS_SDK_DIR}/lib/vtls/vtls.h"
		"${THIS_SDK_DIR}/lib/vtls/vtls_int.h"
		"${THIS_SDK_DIR}/lib/vtls/wolfssl.h"
		"${THIS_SDK_DIR}/lib/vtls/x509asn1.h"

	GROUP "vquic"
		"${THIS_SDK_DIR}/lib/vquic/curl_msh3.c"
		"${THIS_SDK_DIR}/lib/vquic/curl_ngtcp2.c"
		"${THIS_SDK_DIR}/lib/vquic/curl_quiche.c"
		"${THIS_SDK_DIR}/lib/vquic/vquic.c"
		"${THIS_SDK_DIR}/lib/vquic/curl_msh3.h"
		"${THIS_SDK_DIR}/lib/vquic/curl_ngtcp2.h"
		"${THIS_SDK_DIR}/lib/vquic/curl_quiche.h"
		"${THIS_SDK_DIR}/lib/vquic/vquic.h"
		"${THIS_SDK_DIR}/lib/vquic/vquic_int.h"

	GROUP "vssh"
		"${THIS_SDK_DIR}/lib/vssh/libssh.c"
		"${THIS_SDK_DIR}/lib/vssh/libssh2.c"
		"${THIS_SDK_DIR}/lib/vssh/wolfssh.c"
		"${THIS_SDK_DIR}/lib/vssh/ssh.h"

	GROUP "lib"
		"${THIS_SDK_DIR}/lib/altsvc.c"
		"${THIS_SDK_DIR}/lib/amigaos.c"
		"${THIS_SDK_DIR}/lib/asyn-ares.c"
		"${THIS_SDK_DIR}/lib/asyn-thread.c"
		"${THIS_SDK_DIR}/lib/base64.c"
		"${THIS_SDK_DIR}/lib/bufref.c"
		"${THIS_SDK_DIR}/lib/c-hyper.c"
		"${THIS_SDK_DIR}/lib/cf-http.c"
		"${THIS_SDK_DIR}/lib/cf-socket.c"
		"${THIS_SDK_DIR}/lib/cfilters.c"
		"${THIS_SDK_DIR}/lib/conncache.c"
		"${THIS_SDK_DIR}/lib/connect.c"
		"${THIS_SDK_DIR}/lib/content_encoding.c"
		"${THIS_SDK_DIR}/lib/cookie.c"
		"${THIS_SDK_DIR}/lib/curl_addrinfo.c"
		"${THIS_SDK_DIR}/lib/curl_des.c"
		"${THIS_SDK_DIR}/lib/curl_endian.c"
		"${THIS_SDK_DIR}/lib/curl_fnmatch.c"
		"${THIS_SDK_DIR}/lib/curl_get_line.c"
		"${THIS_SDK_DIR}/lib/curl_gethostname.c"
		"${THIS_SDK_DIR}/lib/curl_gssapi.c"
		"${THIS_SDK_DIR}/lib/curl_log.c"
		"${THIS_SDK_DIR}/lib/curl_memrchr.c"
		"${THIS_SDK_DIR}/lib/curl_multibyte.c"
		"${THIS_SDK_DIR}/lib/curl_ntlm_core.c"
		"${THIS_SDK_DIR}/lib/curl_ntlm_wb.c"
		"${THIS_SDK_DIR}/lib/curl_path.c"
		"${THIS_SDK_DIR}/lib/curl_range.c"
		"${THIS_SDK_DIR}/lib/curl_rtmp.c"
		"${THIS_SDK_DIR}/lib/curl_sasl.c"
		"${THIS_SDK_DIR}/lib/curl_sspi.c"
		"${THIS_SDK_DIR}/lib/curl_threads.c"
		"${THIS_SDK_DIR}/lib/dict.c"
		"${THIS_SDK_DIR}/lib/doh.c"
		"${THIS_SDK_DIR}/lib/dynbuf.c"
		"${THIS_SDK_DIR}/lib/easy.c"
		"${THIS_SDK_DIR}/lib/easygetopt.c"
		"${THIS_SDK_DIR}/lib/easyoptions.c"
		"${THIS_SDK_DIR}/lib/escape.c"
		"${THIS_SDK_DIR}/lib/file.c"
		"${THIS_SDK_DIR}/lib/fileinfo.c"
		"${THIS_SDK_DIR}/lib/fopen.c"
		"${THIS_SDK_DIR}/lib/formdata.c"
		"${THIS_SDK_DIR}/lib/ftp.c"
		"${THIS_SDK_DIR}/lib/ftplistparser.c"
		"${THIS_SDK_DIR}/lib/getenv.c"
		"${THIS_SDK_DIR}/lib/getinfo.c"
		"${THIS_SDK_DIR}/lib/gopher.c"
		"${THIS_SDK_DIR}/lib/h2h3.c"
		"${THIS_SDK_DIR}/lib/hash.c"
		"${THIS_SDK_DIR}/lib/headers.c"
		"${THIS_SDK_DIR}/lib/hmac.c"
		"${THIS_SDK_DIR}/lib/hostasyn.c"
		"${THIS_SDK_DIR}/lib/hostip.c"
		"${THIS_SDK_DIR}/lib/hostip4.c"
		"${THIS_SDK_DIR}/lib/hostip6.c"
		"${THIS_SDK_DIR}/lib/hostsyn.c"
		"${THIS_SDK_DIR}/lib/hsts.c"
		"${THIS_SDK_DIR}/lib/http.c"
		"${THIS_SDK_DIR}/lib/http2.c"
		"${THIS_SDK_DIR}/lib/http_chunks.c"
		"${THIS_SDK_DIR}/lib/http_digest.c"
		"${THIS_SDK_DIR}/lib/http_negotiate.c"
		"${THIS_SDK_DIR}/lib/http_ntlm.c"
		"${THIS_SDK_DIR}/lib/http_proxy.c"
		"${THIS_SDK_DIR}/lib/http_aws_sigv4.c"
		"${THIS_SDK_DIR}/lib/idn.c"
		"${THIS_SDK_DIR}/lib/if2ip.c"
		"${THIS_SDK_DIR}/lib/imap.c"
		"${THIS_SDK_DIR}/lib/inet_ntop.c"
		"${THIS_SDK_DIR}/lib/inet_pton.c"
		"${THIS_SDK_DIR}/lib/krb5.c"
		"${THIS_SDK_DIR}/lib/ldap.c"
		"${THIS_SDK_DIR}/lib/llist.c"
		"${THIS_SDK_DIR}/lib/md4.c"
		"${THIS_SDK_DIR}/lib/md5.c"
		"${THIS_SDK_DIR}/lib/memdebug.c"
		"${THIS_SDK_DIR}/lib/mime.c"
		"${THIS_SDK_DIR}/lib/mprintf.c"
		"${THIS_SDK_DIR}/lib/mqtt.c"
		"${THIS_SDK_DIR}/lib/multi.c"
		"${THIS_SDK_DIR}/lib/netrc.c"
		"${THIS_SDK_DIR}/lib/nonblock.c"
		"${THIS_SDK_DIR}/lib/noproxy.c"
		"${THIS_SDK_DIR}/lib/openldap.c"
		"${THIS_SDK_DIR}/lib/parsedate.c"
		"${THIS_SDK_DIR}/lib/pingpong.c"
		"${THIS_SDK_DIR}/lib/pop3.c"
		"${THIS_SDK_DIR}/lib/progress.c"
		"${THIS_SDK_DIR}/lib/psl.c"
		"${THIS_SDK_DIR}/lib/rand.c"
		"${THIS_SDK_DIR}/lib/rename.c"
		"${THIS_SDK_DIR}/lib/rtsp.c"
		"${THIS_SDK_DIR}/lib/select.c"
		"${THIS_SDK_DIR}/lib/sendf.c"
		"${THIS_SDK_DIR}/lib/setopt.c"
		"${THIS_SDK_DIR}/lib/sha256.c"
		"${THIS_SDK_DIR}/lib/share.c"
		"${THIS_SDK_DIR}/lib/slist.c"
		"${THIS_SDK_DIR}/lib/smb.c"
		"${THIS_SDK_DIR}/lib/smtp.c"
		"${THIS_SDK_DIR}/lib/socketpair.c"
		"${THIS_SDK_DIR}/lib/socks.c"
		"${THIS_SDK_DIR}/lib/socks_gssapi.c"
		"${THIS_SDK_DIR}/lib/socks_sspi.c"
		"${THIS_SDK_DIR}/lib/speedcheck.c"
		"${THIS_SDK_DIR}/lib/splay.c"
		"${THIS_SDK_DIR}/lib/strcase.c"
		"${THIS_SDK_DIR}/lib/strdup.c"
		"${THIS_SDK_DIR}/lib/strerror.c"
		"${THIS_SDK_DIR}/lib/strtok.c"
		"${THIS_SDK_DIR}/lib/strtoofft.c"
		"${THIS_SDK_DIR}/lib/system_win32.c"
		"${THIS_SDK_DIR}/lib/telnet.c"
		"${THIS_SDK_DIR}/lib/tftp.c"
		"${THIS_SDK_DIR}/lib/timediff.c"
		"${THIS_SDK_DIR}/lib/timeval.c"
		"${THIS_SDK_DIR}/lib/transfer.c"
		"${THIS_SDK_DIR}/lib/url.c"
		"${THIS_SDK_DIR}/lib/urlapi.c"
		"${THIS_SDK_DIR}/lib/version.c"
		"${THIS_SDK_DIR}/lib/version_win32.c"
		"${THIS_SDK_DIR}/lib/warnless.c"
		"${THIS_SDK_DIR}/lib/wildcard.c"
		"${THIS_SDK_DIR}/lib/ws.c"
		"${THIS_SDK_DIR}/lib/altsvc.h"
		"${THIS_SDK_DIR}/lib/amigaos.h"
		"${THIS_SDK_DIR}/lib/arpa_telnet.h"
		"${THIS_SDK_DIR}/lib/asyn.h"
		"${THIS_SDK_DIR}/lib/bufref.h"
		"${THIS_SDK_DIR}/lib/c-hyper.h"
		"${THIS_SDK_DIR}/lib/cf-http.h"
		"${THIS_SDK_DIR}/lib/cf-socket.h"
		"${THIS_SDK_DIR}/lib/cfilters.h"
		"${THIS_SDK_DIR}/lib/conncache.h"
		"${THIS_SDK_DIR}/lib/connect.h"
		"${THIS_SDK_DIR}/lib/content_encoding.h"
		"${THIS_SDK_DIR}/lib/cookie.h"
		"${THIS_SDK_DIR}/lib/curl_addrinfo.h"
		"${THIS_SDK_DIR}/lib/curl_base64.h"
		"${THIS_SDK_DIR}/lib/curl_ctype.h"
		"${THIS_SDK_DIR}/lib/curl_des.h"
		"${THIS_SDK_DIR}/lib/curl_endian.h"
		"${THIS_SDK_DIR}/lib/curl_fnmatch.h"
		"${THIS_SDK_DIR}/lib/curl_get_line.h"
		"${THIS_SDK_DIR}/lib/curl_gethostname.h"
		"${THIS_SDK_DIR}/lib/curl_gssapi.h"
		"${THIS_SDK_DIR}/lib/curl_hmac.h"
		"${THIS_SDK_DIR}/lib/curl_krb5.h"
		"${THIS_SDK_DIR}/lib/curl_ldap.h"
		"${THIS_SDK_DIR}/lib/curl_log.h"
		"${THIS_SDK_DIR}/lib/curl_md4.h"
		"${THIS_SDK_DIR}/lib/curl_md5.h"
		"${THIS_SDK_DIR}/lib/curl_memory.h"
		"${THIS_SDK_DIR}/lib/curl_memrchr.h"
		"${THIS_SDK_DIR}/lib/curl_multibyte.h"
		"${THIS_SDK_DIR}/lib/curl_ntlm_core.h"
		"${THIS_SDK_DIR}/lib/curl_ntlm_wb.h"
		"${THIS_SDK_DIR}/lib/curl_path.h"
		"${THIS_SDK_DIR}/lib/curl_printf.h"
		"${THIS_SDK_DIR}/lib/curl_range.h"
		"${THIS_SDK_DIR}/lib/curl_rtmp.h"
		"${THIS_SDK_DIR}/lib/curl_sasl.h"
		"${THIS_SDK_DIR}/lib/curl_setup.h"
		"${THIS_SDK_DIR}/lib/curl_setup_once.h"
		"${THIS_SDK_DIR}/lib/curl_sha256.h"
		"${THIS_SDK_DIR}/lib/curl_sspi.h"
		"${THIS_SDK_DIR}/lib/curl_threads.h"
		"${THIS_SDK_DIR}/lib/curlx.h"
		"${THIS_SDK_DIR}/lib/dict.h"
		"${THIS_SDK_DIR}/lib/doh.h"
		"${THIS_SDK_DIR}/lib/dynbuf.h"
		"${THIS_SDK_DIR}/lib/easy_lock.h"
		"${THIS_SDK_DIR}/lib/easyif.h"
		"${THIS_SDK_DIR}/lib/easyoptions.h"
		"${THIS_SDK_DIR}/lib/escape.h"
		"${THIS_SDK_DIR}/lib/file.h"
		"${THIS_SDK_DIR}/lib/fileinfo.h"
		"${THIS_SDK_DIR}/lib/fopen.h"
		"${THIS_SDK_DIR}/lib/formdata.h"
		"${THIS_SDK_DIR}/lib/functypes.h"
		"${THIS_SDK_DIR}/lib/ftp.h"
		"${THIS_SDK_DIR}/lib/ftplistparser.h"
		"${THIS_SDK_DIR}/lib/getinfo.h"
		"${THIS_SDK_DIR}/lib/gopher.h"
		"${THIS_SDK_DIR}/lib/h2h3.h"
		"${THIS_SDK_DIR}/lib/hash.h"
		"${THIS_SDK_DIR}/lib/headers.h"
		"${THIS_SDK_DIR}/lib/hostip.h"
		"${THIS_SDK_DIR}/lib/hsts.h"
		"${THIS_SDK_DIR}/lib/http.h"
		"${THIS_SDK_DIR}/lib/http2.h"
		"${THIS_SDK_DIR}/lib/http_chunks.h"
		"${THIS_SDK_DIR}/lib/http_digest.h"
		"${THIS_SDK_DIR}/lib/http_negotiate.h"
		"${THIS_SDK_DIR}/lib/http_ntlm.h"
		"${THIS_SDK_DIR}/lib/http_proxy.h"
		"${THIS_SDK_DIR}/lib/http_aws_sigv4.h"
		"${THIS_SDK_DIR}/lib/idn.h"
		"${THIS_SDK_DIR}/lib/if2ip.h"
		"${THIS_SDK_DIR}/lib/imap.h"
		"${THIS_SDK_DIR}/lib/inet_ntop.h"
		"${THIS_SDK_DIR}/lib/inet_pton.h"
		"${THIS_SDK_DIR}/lib/llist.h"
		"${THIS_SDK_DIR}/lib/memdebug.h"
		"${THIS_SDK_DIR}/lib/mime.h"
		"${THIS_SDK_DIR}/lib/mqtt.h"
		"${THIS_SDK_DIR}/lib/multihandle.h"
		"${THIS_SDK_DIR}/lib/multiif.h"
		"${THIS_SDK_DIR}/lib/netrc.h"
		"${THIS_SDK_DIR}/lib/nonblock.h"
		"${THIS_SDK_DIR}/lib/noproxy.h"
		"${THIS_SDK_DIR}/lib/parsedate.h"
		"${THIS_SDK_DIR}/lib/pingpong.h"
		"${THIS_SDK_DIR}/lib/pop3.h"
		"${THIS_SDK_DIR}/lib/progress.h"
		"${THIS_SDK_DIR}/lib/psl.h"
		"${THIS_SDK_DIR}/lib/rand.h"
		"${THIS_SDK_DIR}/lib/rename.h"
		"${THIS_SDK_DIR}/lib/rtsp.h"
		"${THIS_SDK_DIR}/lib/select.h"
		"${THIS_SDK_DIR}/lib/sendf.h"
		"${THIS_SDK_DIR}/lib/setopt.h"
		"${THIS_SDK_DIR}/lib/setup-vms.h"
		"${THIS_SDK_DIR}/lib/share.h"
		"${THIS_SDK_DIR}/lib/sigpipe.h"
		"${THIS_SDK_DIR}/lib/slist.h"
		"${THIS_SDK_DIR}/lib/smb.h"
		"${THIS_SDK_DIR}/lib/smtp.h"
		"${THIS_SDK_DIR}/lib/sockaddr.h"
		"${THIS_SDK_DIR}/lib/socketpair.h"
		"${THIS_SDK_DIR}/lib/socks.h"
		"${THIS_SDK_DIR}/lib/speedcheck.h"
		"${THIS_SDK_DIR}/lib/splay.h"
		"${THIS_SDK_DIR}/lib/strcase.h"
		"${THIS_SDK_DIR}/lib/strdup.h"
		"${THIS_SDK_DIR}/lib/strerror.h"
		"${THIS_SDK_DIR}/lib/strtok.h"
		"${THIS_SDK_DIR}/lib/strtoofft.h"
		"${THIS_SDK_DIR}/lib/system_win32.h"
		"${THIS_SDK_DIR}/lib/telnet.h"
		"${THIS_SDK_DIR}/lib/tftp.h"
		"${THIS_SDK_DIR}/lib/timediff.h"
		"${THIS_SDK_DIR}/lib/timeval.h"
		"${THIS_SDK_DIR}/lib/transfer.h"
		"${THIS_SDK_DIR}/lib/url.h"
		"${THIS_SDK_DIR}/lib/urlapi-int.h"
		"${THIS_SDK_DIR}/lib/urldata.h"
		"${THIS_SDK_DIR}/lib/version_win32.h"
		"${THIS_SDK_DIR}/lib/warnless.h"
		"${THIS_SDK_DIR}/lib/wildcard.h"
		"${THIS_SDK_DIR}/lib/ws.h"
)

oct_project(curl LANGUAGE_C TYPE STATIC FOLDER "libs")

target_include_directories(${THIS_PROJECT} 
	PRIVATE ${THIS_SDK_DIR}/lib
	PUBLIC ${THIS_SDK_DIR}/include
	PUBLIC ${OCT_SDKS_DIR}/openssl/x64/include)

target_link_libraries(${THIS_PROJECT} PUBLIC 
	PRIVATE ${OCT_SDKS_DIR}/openssl/x64/lib/libcrypto.lib
	PRIVATE ${OCT_SDKS_DIR}/openssl/x64/lib/libssl.lib)

target_compile_definitions(${THIS_PROJECT} 
	PUBLIC	CURL_STATICLIB

	PRIVATE
	BUILDING_LIBCURL

	USE_SSLEAY
	USE_OPENSSL
		
	# disable unused features
	#CURL_DISABLE_PROXY
	#CURL_DISABLE_COOKIES
				
	# disable all unused protocols
	CURL_DISABLE_DICT
	CURL_DISABLE_FILE
	CURL_DISABLE_FTP
	CURL_DISABLE_GOPHER
	CURL_DISABLE_IMAP
	CURL_DISABLE_TFTP
	CURL_DISABLE_LDAP
	CURL_DISABLE_POP3
	CURL_DISABLE_RTSP
	CURL_DISABLE_SMB
	CURL_DISABLE_SMTP
	CURL_DISABLE_TELNET
)

if (WINDOWS)
	#Use native SSL support on Windows
	target_compile_definitions(${THIS_PROJECT} PRIVATE
		USE_WINDOWS_SSPI
		#USE_SCHANNEL
	)
	target_link_libraries (${THIS_PROJECT} INTERFACE Ws2_32 Crypt32)
endif()

#if (WINDOWS)
#	#Use native SSL support on Windows
#	target_compile_definitions(${THIS_PROJECT} PRIVATE
#		USE_WINDOWS_SSPI
#		USE_SCHANNEL
#	)
#	target_link_libraries (${THIS_PROJECT} INTERFACE Ws2_32 Crypt32)
#endif()

#CURL_RCFILES = curl.rc
#CURL_LIBRCFILES = libcurl.rc